# magshimim-trivia

./: .gitignore  Cargo.toml  README.md  TODO.md  migrations.toml
client/: Cargo.toml
client/src/: action.rs  connection.rs  consts.rs  main.rs  message.rs
client/src/page/: create_question.rs  create_room.rs  createroom.rs  game.rs  highscores.rs  join_room.rs  joinroom.rs  login.rs  main_menu.rs  mainmenu.rs  mod.rs  personal_stats.rs  personalstats.rs  register.rs  results.rs  room.rs  statistics.rs
server/: Cargo.toml
server/src/: communicator.rs  defer.rs  main.rs  server.rs
src/: defer.rs  main.rs
src/db/: mod.rs  sqlite.rs
src/handler/: factory.rs  login.rs  mod.rs
src/managers/: logged_user.rs  login.rs  menu.rs  mod.rs
src/messages/: mod.rs  request.rs  response.rs
src/server/: communicator.rs  mod.rs
trivia/: Cargo.toml
trivia/src/: lib.rs
trivia/src/constraint/: email.rs  mod.rs  password.rs  username.rs
trivia/src/db/: mod.rs  opentdb.rs  question.rs  sqlite.rs
trivia/src/db/turbosql/: mod.rs  models.rs
trivia/src/handler/: factory.rs  game.rs  login.rs  menu.rs  mod.rs  room_admin.rs  room_member.rs  room_user.rs
trivia/src/managers/: game.rs  logged_user.rs  login.rs  mod.rs  room.rs  statistics.rs
trivia/src/messages/: address.rs  mod.rs  phone_number.rs  request.rs  response.rs
trivia/src/server/: communicator.rs  mod.rs
