[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", features = ["from"], default-features = false }
iced = { version = "0.12.1", default-features = false, features = ["tokio"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["fs", "full"] }
trivia = { path = "../trivia" }
