[package]
name = "trivia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["windows-targets", "winapi", "std", "serde"], default-features = false }
fancy-regex = "0.13.0"
sea-query = { version = "0.30.7", default-features = false, features = ["backend-sqlite", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.18"
sqlite = "0.34.0"
thiserror = "1.0.58"
tiny-rng = "0.2.0"
ureq = { version = "2.9.6", default-features = false, features = ["tls"] }
